# jdp-backend/server/common/api.yml
@@ -6,97 +6,11 @@ info:
 servers:
   - url: /api/v1
 tags:
-  - name: Examples
-    description: Simple example endpoints
+  - name: votes
+    description: Vote API specification
   - name: Specification
     description: The swagger API specification
 paths:
-  /examples:
-    get:
-      tags:
-        - Examples
-      description: Fetch all examples
-      responses:
-        200:
-          description: Return the example with the specified id
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Example'
-        4XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        5XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    post:
-      tags:
-        - Examples
-      description: Create a new example
-      requestBody:
-        description: an example
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ExampleBody'
-        required: true
-      responses:
-        201:
-          description: Return the example with the specified id
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Example'
-        4XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        5XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /examples/{id}:
-    get:
-      tags:
-        - Examples
-      parameters:
-        - name: id
-          in: path
-          description: The id of the example to retrieve
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: Return the example with the specified id
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Example'
-        4XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        5XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
   /votes/token:
     post:
       tags:
@@ -116,7 +30,7 @@ paths:
             type: number
       responses:
         200:
-          description: Return the example with the specified id
+          description: 
           content:
             application/json:
               schema:
@@ -145,7 +59,7 @@ paths:
             type: string
       responses:
         200:
-          description: Return the example with the specified id
+          description: 
           content:
             application/json:
               schema:
@@ -182,7 +96,7 @@ paths:
                     type: string
       responses:
         200:
-          description: Return the example with the specified id
+          description: return result
           content:
             application/json:
               schema:
@@ -211,7 +125,7 @@ paths:
             type: number
       responses:
         200:
-          description: Return the example with the specified id
+          description: return result
           content:
             application/json:
               schema:
@@ -247,7 +161,7 @@ paths:
             type: number
       responses:
         200:
-          description: Return the example with the specified id
+          description: return result
           content:
             application/json:
               schema:
@@ -283,7 +197,7 @@ paths:
             type: number
       responses:
         200:
-          description: Return the example with the specified id
+          description: return result
           content:
             application/json:
               schema:
@@ -312,7 +226,7 @@ paths:
             type: number
       responses:
         200:
-          description: Return the example with the specified id
+          description: return result
           content:
             application/json:
               schema:
